--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -31,7 +31,8 @@
     </div>
     <%# /支払額の表示 %>
 
-    <%= form_with model: @delivery, url: item_deliveries_path, id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+    <%= form_with url: item_orders_path, id: 'charge-form', class: 'transaction-form-wrap', local: true do |f| %>
+      <%= render 'error_messages_order', order: @order %>
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
